--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,13 +13,19 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.20', '1.23' ]
+
+    name: Go ${{ matrix.go }} run
+
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.20'
+        go-version: ${{ matrix.go }}
 
     - name: Build
       run: go build -v ./...
